Bug 98686 - Spice-gtk does not connect/crash on UsbDk failure
Summary: Spice-gtk does not connect/crash on UsbDk failure
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-11 13:43 UTC by Victor Toso
Modified: 2016-11-15 17:20 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Victor Toso 2016-11-11 13:43:59 UTC
I was testing a new virt-viewer build with f26 (rawhide) mingw packages with libusb --enable-usbdk and spice-gtk with --enable-usbredir.

I've installed UsbDK 1.0.15 and rebooted my Windows 7 x86_64.

- When booting the VM in normal mode, I can't use UsbDk due a problem with signed drivers. This causes failure in spice-gtk [0] which does not connect.

[0] https://victortoso.fedorapeople.org/virt-viewer-5.0-with-usbdk-crash.png

- When booting the VM in "Disable Driver Signature Enforcement" all goes well and I can redirect usb devices using UsbDk.

If one wants to test this build, one can find the msi installer here [1]. The official version should be released after Fedora 25 is.

[1] https://victortoso.fedorapeople.org/
Comment 1 Victor Toso 2016-11-14 23:30:21 UTC
A few patches sent related to handling errors... this one should fix the hang:
https://lists.freedesktop.org/archives/spice-devel/2016-November/033602.html


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.