win-usb-dev: let _finalize() do libusb_exit()

This fixes a hang in mingw-spice-gtk when the GUdevClient fails to
initialize due to problems in the UsbDk installation.

Before this patch, libusb_exit() was being called twice:
- At g_udev_client_initable_init(), after failure with priv->ctx as
  argument
- At g_udev_client_finalize() as g_udev_client_initable_init() failure
  implies the object failed to initialize and it is terminated. Here
  it was being called with NULL as priv->ctx was set to NULL in
  g_udev_client_initable_init()

Resolves: https://bugs.freedesktop.org/show_bug.cgi?id=98686
Signed-off-by: Victor Toso <victortoso@redhat.com>
Acked-by: Christophe Fergeau <cfergeau@redhat.com>